--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ p {
     width: 340px;
 }
 
+@media screen and (max-width:700px) {
+    .card {
+        padding:1rem;
+    }
+}
+
 .rating {
     display: flex;
     justify-content: space-between;
