--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p {
     display: flex;
     flex-direction: column;
     margin: 1rem;
-    width: 340px;
+    max-width: 340px;
 }
 
 @media screen and (max-width:700px) {
